# plotting-mcp

./: Dockerfile  pyproject.toml
src/plotting_mcp/: cloud.py  server.py
